added under construction to the version control chapter to make it clear that is quite unfinished

--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -1,5 +1,8 @@
 # Version control with GitHub {#GitHub}
 
+![](img/Page_Under_Construction.png)
+image source: https://en.wikipedia.org/wiki/File:Page_Under_Construction.png
+
 ## Overview 
 We will be using version control with GitHub and Git to share our code on group projects. Here is a list of videos you might want to watch to familiarize yourself further with these tools, as well as a cheatsheet of Git and terminal commands.
 
