--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -468,11 +468,17 @@ will read in the original, unscaled Wisconsin breast cancer data set; we have be
 to do this we will download the raw data from the UCI Machine learning repository, and then compute the unscaled columns equivalent to those we have been working with 
 in the scaled version of the data set ("worst" measures). 
 
-```{r 06-scaling-1}
+```{r download unscaled data and clean up, warning = FALSE, echo =  FALSE, message = FALSE}
 unscaled_cancer <- read_csv("https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data", 
                             col_names = FALSE) %>% 
   select(X1, X2, X11:X20)
 colnames(unscaled_cancer) <- colnames(cancer)
+unscaled_cancer <- select(unscaled_cancer, -ID)
+write_csv(unscaled_cancer, "data/unscaled-wdbc.data.csv")
+```
+
+```{r 06-scaling-1, message = FALSE}
+unscaled_cancer <- read_csv("data/unscaled-wdbc.data.csv")
 head(unscaled_cancer)
 ```
 
@@ -480,13 +486,11 @@ Looking at the unscaled / unshifted data above, you can see that the difference 
 and the mean appears to be much larger too. 
 Will this affect predictions? In order to find out, we will create a scatter plot of these two predictors (coloured by diagnosis) for both
 the unstandardized data we just downloaded, and the standardized version of that same data. In order to standardize the `unscaled_cancer` data,
-we will use the `scale` function in R, passing `TRUE` to the `center` argument:
+we will use the `preProcess` function in from `caret` to create an object that we can use to transform the unscaled data to scaled data. To tell this function how we would like to do this we need to specify the `method` argument to be `c("center", "scale")`. Next we use the `predict` function to apply the data transformation to our data set:
 
 ```{r 06-scaling-3}
-scaled_cancer <- unscaled_cancer %>% 
-  select(-c(ID,Class)) %>% 
-  scale(center = TRUE) 
-scaled_cancer <- data.frame(ID = unscaled_cancer$ID, Class = unscaled_cancer$Class, scaled_cancer)
+scale_transformer <- preProcess(unscaled_cancer, method = c("center", "scale")) 
+scaled_cancer <- predict(scale_transformer, unscaled_cancer)
 head(scaled_cancer)
 ```
 
@@ -494,6 +498,9 @@ Now let's generate the two scatter plots, one for `unscaled_cancer` and one for 
 
 <center>
 ```{r 06-scaling-2, warning = FALSE, echo =  FALSE,  fig.height = 4, fig.width = 10}
+unscaled_cancer$ID <- as.numeric(row.names(unscaled_cancer))
+scaled_cancer$ID <- as.numeric(row.names(unscaled_cancer))
+
 unscaled_cancer <- unscaled_cancer %>% 
   select(ID, Class, Area, Smoothness)
 new_obs <- tibble(ID = 99999, Class = "unknown", Area = 3.7, Smoothness = 5.3)
