--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1,3 +1,7 @@
+```{r 06-setup, include=FALSE}
+knitr::opts_chunk$set(message = FALSE)
+```
+
 # Classification II: Evaluation & tuning {#classification_continued}
 
 ## Overview 
@@ -49,7 +53,7 @@ In R, we can use the `caret` package not only to perform K-nearest neighbour cla
 classification worked. Let's start by loading the necessary libraries, reading in the breast cancer data from the previous
 chapter, and making a quick scatter plot visualization of tumour cell concavity versus smoothness coloured by diagnosis.
 
-```{r 06-precode, message = FALSE, fig.height = 4, fig.width = 5}
+```{r 06-precode, fig.height = 4, fig.width = 5}
 # load libraries
 library(tidyverse)
 library(caret)
@@ -389,7 +393,7 @@ In general, if the model *is influenced too much* by the training data, it is sa
 You can see this effect in the plots below as we vary the number of neighbours $K$ in (1, 7, 20, 200):
 
 <center>
-```{r 06-decision-grid-K, echo=FALSE, fig.height = 7, fig.width = 10}
+```{r 06-decision-grid-K, echo = FALSE, fig.height = 7, fig.width = 10}
 library(repr)
 library(gridExtra)
 ks <- c(1, 7, 20, 200)
