fixed wording and re-built book

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -486,11 +486,9 @@ unscaled_cancer <- read_csv("data/unscaled-wdbc.data.csv")
 head(unscaled_cancer)
 ```
 
-Looking at the unscaled / unshifted data above, you can see that the difference between the values for smoothness measurements are much larger than those for area,
-and the mean appears to be much larger too. 
-Will this affect predictions? In order to find out, we will create a scatter plot of these two predictors (coloured by diagnosis) for both
-the unstandardized data we just downloaded, and the standardized version of that same data. In order to standardize the `unscaled_cancer` data,
-we will use the `preProcess` function in from `caret` to create an object that we can use to transform the unscaled data to scaled data. To tell this function how we would like to do this we need to specify the `method` argument to be `c("center", "scale")`. Next we use the `predict` function to apply the data transformation to our data set:
+Looking at the unscaled / unshifted data above, you can see that the difference between the values for smoothness measurements are much larger than those for area, and the mean appears to be much larger too. Will this affect predictions? In order to find out, we will create a scatter plot of these two predictors (coloured by diagnosis) for both the unstandardized data we just loaded, and the standardized version of that same data. 
+
+We will use the `preProcess` function from `caret` to create an object we can use to standardize the `unscaled_cancer` data set. When we do this, we need to specify the `method` argument to be `c("center", "scale")` so that the standardization results in the predictors having a mean (center) of 0 and a standard deviation (scale) of 1. Finally, we use the `predict` function to apply the data transformation to our data set:
 
 ```{r 06-scaling-3}
 scale_transformer <- preProcess(unscaled_cancer, method = c("center", "scale")) 
