--- a/index.Rmd
+++ b/index.Rmd
@@ -29,6 +29,7 @@ output:
     citation_package: natbib
     keep_tex: yes
   bookdown::epub_book: default
+  always_allow_html: true
 ---
 
 ```{r setup, include=FALSE}
