replaced scale with prePRocess in all chapters; fixed over/underfit example

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -547,6 +547,11 @@ standardizing the data can change things in an important way when we are using p
 As a rule of thumb, standardizing your data should be a part of the preprocessing you do before any predictive
 modelling / analysis.
 
+> **`preProcess`ing Dataframes:** When we apply the `preProcess` function to classification data, we can simply
+> pass in the whole dataframe because `preProcess` knows to ignore `<fct>`-type variables. But in later chapters
+> in this text, we will be predicting numerical `<dbl>`-type variables; in this case, you must separate
+> your predictors and outputs prior to `preProcess`ing.
+
 ### Balancing
 
 Another potential issue in a data set for a classifier is *class imbalance*, i.e., when one label is much more common
