--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -1,3 +1,7 @@
+```{r 08-setup, include=FALSE}
+knitr::opts_chunk$set(message = FALSE, warning = FALSE)
+```
+
 # Regression II: Linear regression {#regression2}
 
 ## Overview 
