--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -1,3 +1,8 @@
+```{r 09-setup, include=FALSE}
+knitr::opts_chunk$set(message = FALSE, warning = FALSE)
+```
+
+
 # Clustering {#clustering}
 
 ## Overview 
