for LaTeX compile: added local copies of remote linked images, removed unicode chars

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -191,34 +191,34 @@ this is not the case for `.xlsx` files. Take a look at what a `.xlsx` file would
 ```
 ,?'O
     _rels/.rels???J1??>E?{7?
-<?V????w8?'J???'QrJ???Tf?d??d?o?wZ'?ф??@>?4'?|??hlIo??Fǟ
+<?V????w8?'J???'QrJ???Tf?d??d?o?wZ'???@>?4'?|??hlIo??F
 t                                                       8f??3wn
 ????t??u"/
-          %~Ed2Ɩ??<?w??
-                       ?Pd(??J-?E???7?'t(?-GZ?????y?ߎ??c~N?g[^_r?4
+          %~Ed2??<?w??
+                       ?Pd(??J-?E???7?'t(?-GZ?????y???c~N?g[^_r?4
                                                                   yG?O
                                                                       ?K??G?RPX?<??,?'O[Content_Types].xml???n?0E%?J
-                                                                                                                    ]TUE袏e??O??c[???????6q??s??d?m???ƻ\???H?^????3}	?rZY? ?:L60?^?????XTP+?|?3???"~?3T1W3???ޓ,?#p?R?!??w(??R???[S?D?kP?P!XS(?i?t?$?ei
-оX?ܒa??4VT?,D?Jq
+                                                                                                                    ]TUEe??O??c[???????6q??s??d?m???\???H?^????3} ?rZY? ?:L60?^?????XTP+?|?3???"~?3T1W3???,?#p?R?!??w(??R???[S?D?kP?P!XS(?i?t?$?ei
+X?a??4VT?,D?Jq
                 D
-                 ?????u?]??;??L?.8AhfNv}߼?hHF*җ??Jr?Q?%?g?U??CtX"8x>?.|????5j?/$???JE?c??~ݜ??4iw?????E;?+?S??w?cV+?:???2l???=?2nݡl?????;|?V??????c'?????9?P&Bcj,?'OdocProps/app.xml??1
-                                                     ?0???k????A?u?U?]ȝ??{#?:;/<?g?Cߩd????M+?=???Z?O??R+??u?P?X?̔ KV@??M$??a???d,??_???4??5v?R????9D????t??Fk?Ú'P?=?,?'OdocProps/core.xml??MO?0
+                 ?????u?]??;??L?.8AhfNv}?hHF*??Jr?Q?%?g?U??CtX"8x>?.|????5j?/$???JE?c??~??4iw?????E;?+?S??w?cV+?:???2l???=?2nel???;|?V??????c'?????9?P&Bcj,?'OdocProps/app.xml??1
+                                                     ?0???k????A?u?U?]??{#?:;/<?g?Cd????M+?=???Z?O??R+??u?P?X KV@??M$??a???d?_???4??5v?R????9D????t??Fk?Ú'P?=?,?'OdocProps/core.xml??MO?0
                                                              ??J?{???3j?h'??(q??U4J
-                                                                                   ??=i?I'?b??[v?ޙ!??{gk?
-                                                                                                         F2????v5yj7??"J???,?d???J???C??ƚl??4?-?$ۤ??`$?4t?K?.;?%c?J-Q҉??G<??ɑZ-H????
-                                                  X????z???6?????~q??X??ٗ6?????q^>??tH???*?D???M?g
-??D?????????ݐ?d?:g).ے?3.??׉uԟ?ǟj?P?F؝,?'Oxl/_rels/workbook.xml.rels??Ak1??J?{7???R?^J?kk@Hf7??I?L???E]A?Þ?{a??`f?????b?6xUQ?@o?m}??o????X{???Q?????;?y?\?
+                                                                                   ??=i?I'?b??[v?!??{gk?
+                                                                                                         F2????v5yj??"J???,?d???J???C??l??4?-?`$?4t?K?.;?%c?J??G<?H????
+                                                  X????z???6?????~q??X??????q^>??tH???*?D???M?g
+??D?????????d?:g).?3.??j?P?F?'Oxl/_rels/workbook.xml.rels??Ak1??J?{7???R?^J?kk@Hf7??I?L???E]A?Þ?{a??`f?????b?6xUQ?@o?m}??o????X{???Q?????;?y?\?
                         O
-?YY??4΀?L??S??k?252j??
+?YY??4?L??S??k?252j??
 ??V ?C?g?C]???????
 ?
 ???E??TENyf6%
-             ?Y????|??:%???}^ N?Q?ۤ?N'????)??F?\??P?G??,?'O'xl/printerSettings/printerSettings1.bin?Wmn? 
+             ?Y????|??:%???}^ N?Q?N'????)??F?\??P?G??,?'O'xl/printerSettings/printerSettings1.bin?Wmn? 
                                                                                                         ??Sp>?G???q?#
-                                                                                                                     ?I??ڒ5R'???q????(?L
-??m??8F?5<	L`?ݍ-?`?A??2{dp??9R#?>7??Xu???ꋝ/?X??HI?|?
+                                                                                                                     ?I??5R'???q????(?L
+??m??8F?5<  L`??`?A??2{dp??9R#?>7??Xu???/?X??HI?|?
                                                           ??r)???\?VA8?2dFfq???I]]o
-5`??<͘??6uA	?
+5`????6A ?
 ```
 
 This type of file representation allows Excel files to store additional things that you cannot store in a `.csv` file, such as fonts, text formatting, graphics, multiple sheets 
