--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -82,7 +82,7 @@ Tidy data satisfy the following three criteria:
 - each column is a single variable, and
 - each value is a single cell (i.e., its row and column position in the data frame is not shared with another value)
 
-![](https://d33wubrfki0l68.cloudfront.net/6f1ddb544fc5c69a2478e444ab8112fb0eea23f8/91adc/images/tidy-1.png)
+<img src="img/tidy.png", width="650">
 *image source: [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham*
 
 > **Definitions to know:**
