--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -96,7 +96,7 @@ and why we do it later in this chapter. Each image additionally was given a uniq
 11. symmetry 
 12. fractal dimension ($"coastline\: approximation" - 1$)
 
-![A magnified image of a malignant breast fine needle aspiration image. White lines denote the boundary of the cell nuclei. Source: https://www.semanticscholar.org/paper/Breast-Cancer-Diagnosis-and-Prognosis-Via-Linear-P-Mangasarian-Street/3721bb14b16e866115c906336e9d70db096c05b9/figure/0](https://ai2-s2-public.s3.amazonaws.com/figures/2017-08-08/3721bb14b16e866115c906336e9d70db096c05b9/1-Figure1-1.png  "A magnified image of a malignant breast fine needle aspiration.")
+![A magnified image of a malignant breast fine needle aspiration image. White lines denote the boundary of the cell nuclei. Source: https://www.semanticscholar.org/paper/Breast-Cancer-Diagnosis-and-Prognosis-Via-Linear-P-Mangasarian-Street/3721bb14b16e866115c906336e9d70db096c05b9/figure/0](img/malignant_cancer.png  "A magnified image of a malignant breast fine needle aspiration.")
 
 
 Below we use `glimpse` to preview the data frame. This function is similar to `head`, but can be easier to read when we have a lot of columns:
